--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ indexer/Wikipedia-20201202212141.xml
 indexer/Wikipedia-20201202230101.xml
 scraper/pages_2.txt
 indexer/__pycache__/*
+indexer/Wikipedia-20201206200853.xml
